--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "gsap-trial": "^3.12.7",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "loaders.css": "^0.1.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
